[workspace]

members = [
	"syntax/basic", 
	"syntax/proc-macro-demo/hello",
	"syntax/proc-macro-demo/hello-macro",

	"future",

	"net/sync",
	"net/async",
	
	"ffi/cpp-rust-ffi/common-rust",
	"ffi/java-rust-ffi/rust",
	"ffi/nodejs-rust-ffi/rust",
	"ffi/rust-c-ffi/",

	"logging",
	"code-coverage",

	"database/diesel",
	"database/postgres"
]