[workspace]

members = [
	"syntax/basic", 
	"syntax/proc-macro-demo/hello",
	"syntax/proc-macro-demo/hello-macro",

	"async/future",
	"async/tokio",
	"async/mio",
	
	"net",
	
	"encoding/proto",
	
	"ffi/cpp-rust-ffi/common-rust",
	"ffi/java-rust-ffi/rust",
	"ffi/nodejs-rust-ffi/rust",
	"ffi/rust-c-ffi/",

	"logging",
	"code-coverage",
	"bench",

	"database/diesel",
	"database/postgres",
]