[package]
name = "bench"
version = "0.1.0"
authors = ["redtankd <redtankd@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
actix-web = "2"
actix-rt = "1"
actix = "0.9"

[build-dependencies]
rustc_version = "0.2.3"