[package]

name = "me"
version = "0.1.0"
authors = ["redtankd <redtankd@qq.com>"]
edition = "2018"

[lib]

name = "limit"
path = "src/lib_limit.rs"

[[bin]]

name = "limit_server"
path = "src/limit_server.rs"

[dependencies]

futures = "0.3.1"
tokio = { version = "0.2.11", features = ["full"] }
actix-web = "2"
actix-rt = "1"
actix = "0.9"

serde = "1.0"
bincode = "1.2.1"

log = "0.4.0"
env_logger = "0.7.1"
clap = "2.33"
rand = "0.7.3"
slab = "0.4.2"

[build-dependencies]

rustc_version = "0.2.3"

[workspace]