[package]

name = "me"
version = "0.1.0"
authors = ["redtankd <redtankd@qq.com>"]
edition = "2018"

[lib]

name = "limit"
path = "src/lib_limit.rs"

[dependencies]

futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
http = "0.2"
actix-web = "2"
actix-rt = "1"
actix = "0.9"
reqwest = { version = "0.10", features = ["blocking", "json"] }

serde = "1.0"
bincode = "1.2.1"

log = "0.4.8"
env_logger = "0.7.1"
clap = "2.33"
rand = "0.7.3"
slab = "0.4.2"

redis = "0.15.1"

[build-dependencies]

rustc_version = "0.2.3"

[workspace]