[package]
edition = "2018"
name = "futures-test"
version = "0.1.0"
authors = ["redtankd <redtankd@qq.com>"]

[lib]
name = "futures_test"

[dev-dependencies]

futures = { version = "0.3.1", features = ["thread-pool"] }
tokio = { version = "0.2.0", features = ["rt-core", "time", "macros"] }
timer = "0.2"
chrono = "0.4"