[package]

name = "diesel_demo"
version = "0.1.0"
authors = ["redtankd <redtankd@qq.com>"]

[dependencies]

diesel = { version = "0.11.0", default-features = false }
diesel_codegen = { version = "0.11.0" }
dotenv = "0.8.0"

[features]

# multiple database support
default = ["postgres"]
postgres = ["diesel/postgres", "diesel_codegen/postgres"]
mysql = ["diesel/mysql", "diesel_codegen/mysql"]