[package]

name = "me"
version = "0.1.0"
authors = ["redtankd <redtankd@qq.com>"]
edition = "2018"

[lib]

name = "limit"
path = "src/lib_limit.rs"

[dependencies]

actix-web = "4.0.0-beta.6"
actix-rt = "2.2.0"
actix = "0.12.0"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
http = "0.2.4"

serde = "1.0"
bincode = "1.2.1"

log = "0.4.8"
env_logger = "0.8.4"
clap = "2.33"
rand = "0.8.4"
slab = "0.4.2"

redis = "0.20.1"

[build-dependencies]

rustc_version = "0.4.0"
